Updated openapi-documention
