# src/main/java/com/web3/with/controller/VacancyController.java
@@ -47,8 +47,8 @@ public class VacancyController implements VacanciesApi {
         return ResponseEntity.ok(vacancyService.findById(id));
     }
 
-    @PostMapping("/search")
-    public ResponseEntity<VacanciesRs> searchVacancies(VacancyRq vacancyRq, @RequestParam(required = false) String keyword) {
+    @Override
+    public ResponseEntity<VacanciesRs> getVacanciesByKeyword(VacancyRq vacancyRq, String keyword) {
         return ResponseEntity.ok(vacancyService.getVacanciesByKeyword(vacancyRq.getPage(), keyword));
     }
 
